# zhuhai-sunset-monitor

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  run.py
.github/workflows/: scrape.yml
alembic/: env.py
data/: history.json  map-data.json
docs/: index.html
docs/data/: history.json  map-data.json
src/: config.py  main.py  seed_locations.py
src/models/: database.py  location.py  sunset.py
src/routers/: api.py  dashboard.py
src/schemas/: location.py  sunset.py
src/services/: analyzer.py  astronomer.py  location_recommender.py  notifier.py  sunsetbot.py
src/static/css/: style.css
src/tasks/: scheduler.py
templates/: base.html  dashboard.html
tests/: conftest.py  test_astronomer.py  test_notifier.py  test_sunsetbot.py
